ingnored temp files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 /mockups/js/.DS_Store
 /tmp/cache/sass/cd098fe37e07d3e8a9c9505c6909819df3fec0a3/
 /tmp/pids/
+tmp
+/tmp/cache/assets/C75/E30/sprockets%2Fb5e8063646551d57620e2db0206b34d7
+/tmp/cache/assets/C7C/010/sprockets%2Fc93510d25a171363a080d9fe9378e153
+/tmp/cache/assets/D7E/FB0/sprockets%2Fcea19fbdc8148902caacd3468e089799
+/tmp/cache/assets/D99/930/sprockets%2F3c9e41c8e6efcbf24a32791a3516a1fc
+/tmp/cache/assets/DF5/800/sprockets%2F0d62ebce3faf919e29e5ac2cf04f03a4
+/tmp/cache/assets/DFF/140/sprockets%2Fde21ec2a9b27f7e8f0fd2ad8701f4af6
