--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 /mockups/css/.sass-cache/
 /mockups/css/style.css
 /mockups/js/.DS_Store
-/tmp/cache/sass/cd098fe37e07d3e8a9c9505c6909819df3fec0a3/
+/tmp/cache/
 /tmp/pids/
